<resources>
    <string name="app_name">DestinoCerto</string>
    <string name="countryName">Lista de Países</string>
    <string name="titleTv">Lista de Países</string>
    <string name="textCountryImage">Imagem do Pais</string>
    <string name="sv_search">Buscar</string>
    <string name="hint_nickName">Apelido</string>
    <string name="hint_comment">Comentário</string>
    <string name="btnPrice">Cotação da moeda</string>
    <string name="btnComment">Comentário</string>
    <string name="btnSave_comment">Salvar Comentário</string>
    <string name="priceTitle">Cotação da moeda</string>
    <string name="nameCoin">Nome da moeda</string>
    <string name="bid">Oferta</string>
    <string name="descriptionName">Nome: </string>
    <string name="descriptionPrice">Valor de 1,00 R$: </string>
    <string name="appTitle">Destino Certo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>