<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActivityPrice">

    <TextView
        android:id="@+id/tvPriceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/priceTitle" />

    <TextView
        android:id="@+id/tvNameCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvDescriptionName"
        android:layout_alignBottom="@+id/tvPriceTitle"
        android:layout_marginEnd="-236dp"
        android:layout_marginBottom="-36dp"
        android:text="@string/nameCoin" />

    <TextView
        android:id="@+id/tvDescriptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPriceTitle"
        android:layout_marginBottom="-36dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:text="@string/descriptionName" />

    <TextView
        android:id="@+id/tvBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvDescriptionPrice"
        android:layout_alignBottom="@+id/tvDescriptionPrice"
        android:layout_marginEnd="-88dp"
        android:layout_marginBottom="0dp"
        android:text="@string/bid" />

    <TextView
        android:id="@+id/tvDescriptionPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDescriptionName"
        android:layout_marginBottom="-33dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:text="@string/descriptionPrice" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_alignBottom="@+id/tvBid"
        android:layout_marginBottom="-267dp" />

    <Button
        android:id="@+id/btnBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/videoView"
        android:layout_marginBottom="-70dp"
        android:text="Planejar"/>

</RelativeLayout>